--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,6 @@ script:
   - docker pull mcr.microsoft.com/java/jdk:8-zulu-alpine
 after_success:
   #登录registry的用户名是您的腾讯云的账号ID，密码是您开通镜像仓库服务时设置的密码
-  - sudo docker login --username=${username}  --password=${password} ccr.ccs.tencentyun.com
-  - sudo docker tag mcr.microsoft.com/java/jdk:8-zulu-alpine ccr.ccs.tencentyun.com/akapril/jdk:8-zulu-alpine 
-  - sudo docker push ccr.ccs.tencentyun.com/akapril/jdk:8-zulu-alpine
+  - sudo docker login --username=${username}  --password=${password} registry.cn-qingdao.aliyuncs.com
+  - sudo docker tag mcr.microsoft.com/java/jdk:8-zulu-alpine registry.cn-qingdao.aliyuncs.com/jiahua/jdk:8-zulu-alpine 
+  - sudo docker push registry.cn-qingdao.aliyuncs.com/jiahua/jdk:8-zulu-alpine
